--- a/ui/composer/ui_composer_data_source.ui
+++ b/ui/composer/ui_composer_data_source.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>380</width>
-    <height>130</height>
+    <height>168</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,26 +19,17 @@
   <property name="maximumSize">
    <size>
     <width>16777215</width>
-    <height>130</height>
+    <height>170</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>Data Source</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0" colspan="2">
-    <widget class="QLabel" name="label">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">padding: 2px; font-weight: bold; background-color: rgb(200, 200, 200);</string>
-     </property>
+   <item row="4" column="0" colspan="2">
+    <widget class="QLabel" name="label_3">
      <property name="text">
-      <string>Data Source</string>
+      <string>Referenced table (applicable to views only)</string>
      </property>
     </widget>
    </item>
@@ -67,6 +58,29 @@
      </property>
     </widget>
    </item>
+   <item row="0" column="0" colspan="2">
+    <widget class="QLabel" name="label">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">padding: 2px; font-weight: bold; background-color: rgb(200, 200, 200);</string>
+     </property>
+     <property name="text">
+      <string>Data Source</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="QRadioButton" name="rbViews">
+     <property name="text">
+      <string>Show views only</string>
+     </property>
+    </widget>
+   </item>
    <item row="2" column="0" colspan="2">
     <widget class="QComboBox" name="cboDataSource">
      <property name="minimumSize">
@@ -84,10 +98,13 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="1">
-    <widget class="QRadioButton" name="rbViews">
-     <property name="text">
-      <string>Show views only</string>
+   <item row="5" column="0" colspan="2">
+    <widget class="QComboBox" name="cboReferencedTable">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>30</height>
+      </size>
      </property>
     </widget>
    </item>
