fixed issue #109 - removed social tenure type lookup from lookup selection list, fixed issues #116 - checks if lookup is been used by columns before deleting, fixed issue #129 - inconsistent popup after setting a column property

--- a/ui/wizard/ui_lookup_property.ui
+++ b/ui/wizard/ui_lookup_property.ui
@@ -38,7 +38,7 @@
        <enum>QComboBox::InsertAtTop</enum>
       </property>
      </widget>
-     <widget class="QPushButton" name="edtNewlookup">
+     <widget class="QPushButton" name="btnNewlookup">
       <property name="text">
        <string>New lookup ...</string>
       </property>
