--- a/ui/wizard/ui_stdm_config.ui
+++ b/ui/wizard/ui_stdm_config.ui
@@ -403,7 +403,7 @@
          <item>
           <widget class="QLabel" name="label_3">
            <property name="text">
-            <string>Description</string>
+            <string>Description:</string>
            </property>
            <property name="margin">
             <number>0</number>
