--- a/ui/ui_login.ui
+++ b/ui/ui_login.ui
@@ -80,7 +80,7 @@
         </size>
        </property>
        <property name="text">
-        <string>UserName</string>
+        <string>Username</string>
        </property>
       </widget>
      </item>
