--- a/ui/ui_doc_generator.ui
+++ b/ui/ui_doc_generator.ui
@@ -136,7 +136,7 @@
    <item row="6" column="0">
     <widget class="QCheckBox" name="chkUseOutputFolder">
      <property name="text">
-      <string>Write to output folder</string>
+      <string>Save to output folder</string>
      </property>
     </widget>
    </item>
