--- a/ui/ui_options.ui
+++ b/ui/ui_options.ui
@@ -44,7 +44,7 @@
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_5">
-       <item row="3" column="0" colspan="3">
+       <item row="4" column="0" colspan="4">
         <widget class="QGroupBox" name="groupBox_3">
          <property name="maximumSize">
           <size>
@@ -56,10 +56,30 @@
           <string>Document Composer</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_4">
-          <item row="0" column="0">
-           <widget class="QLabel" name="label_7">
+          <item row="0" column="2">
+           <widget class="QToolButton" name="btn_template_folder">
+            <property name="toolTip">
+             <string>Choose templates directory</string>
+            </property>
             <property name="text">
-             <string>Template folder</string>
+             <string>...</string>
+            </property>
+            <property name="icon">
+             <iconset resource="../resources.qrc">
+              <normaloff>:/plugins/stdm/images/icons/open_file.png</normaloff>:/plugins/stdm/images/icons/open_file.png</iconset>
+            </property>
+            <property name="iconSize">
+             <size>
+              <width>24</width>
+              <height>24</height>
+             </size>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="label_8">
+            <property name="text">
+             <string>Output folder</string>
             </property>
            </widget>
           </item>
@@ -79,10 +99,10 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="0">
-           <widget class="QLabel" name="label_8">
+          <item row="0" column="0">
+           <widget class="QLabel" name="label_7">
             <property name="text">
-             <string>Output folder</string>
+             <string>Template folder</string>
             </property>
            </widget>
           </item>
@@ -99,26 +119,6 @@
             </property>
             <property name="readOnly">
              <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="2">
-           <widget class="QToolButton" name="btn_template_folder">
-            <property name="toolTip">
-             <string>Choose templates directory</string>
-            </property>
-            <property name="text">
-             <string>...</string>
-            </property>
-            <property name="icon">
-             <iconset resource="../resources.qrc">
-              <normaloff>:/plugins/stdm/images/icons/open_file.png</normaloff>:/plugins/stdm/images/icons/open_file.png</iconset>
-            </property>
-            <property name="iconSize">
-             <size>
-              <width>24</width>
-              <height>24</height>
-             </size>
             </property>
            </widget>
           </item>
@@ -145,7 +145,7 @@
          </layout>
         </widget>
        </item>
-       <item row="1" column="0" colspan="3">
+       <item row="1" column="0" colspan="4">
         <widget class="QGroupBox" name="groupBox">
          <property name="title">
           <string>Database Properties</string>
@@ -333,13 +333,6 @@
          </layout>
         </widget>
        </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="label">
-         <property name="text">
-          <string>Set current profile</string>
-         </property>
-        </widget>
-       </item>
        <item row="2" column="0">
         <widget class="QLabel" name="label_6">
          <property name="text">
@@ -347,7 +340,31 @@
          </property>
         </widget>
        </item>
-       <item row="2" column="1">
+       <item row="0" column="2" colspan="2">
+        <widget class="QComboBox" name="cbo_profiles">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>30</height>
+          </size>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>Set current profile</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="0">
+        <widget class="QLabel" name="label_9">
+         <property name="text">
+          <string>Upgrade STDM Configuration to 1.2 </string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="2">
         <widget class="QLineEdit" name="txtRepoLocation">
          <property name="minimumSize">
           <size>
@@ -363,17 +380,7 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="1" colspan="2">
-        <widget class="QComboBox" name="cbo_profiles">
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>30</height>
-          </size>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="2">
+       <item row="2" column="3">
         <widget class="QToolButton" name="btn_supporting_docs">
          <property name="toolTip">
           <string>Choose supporting documents directory</string>
@@ -390,6 +397,13 @@
            <width>24</width>
            <height>24</height>
           </size>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="1">
+        <widget class="QPushButton" name="upgradeButton">
+         <property name="text">
+          <string>Upgrade</string>
          </property>
         </widget>
        </item>
