--- a/ui/ui_feature_details.ui
+++ b/ui/ui_feature_details.ui
@@ -19,6 +19,12 @@
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="QToolButton" name="edit_btn">
+        <property name="minimumSize">
+         <size>
+          <width>23</width>
+          <height>22</height>
+         </size>
+        </property>
         <property name="text">
          <string>...</string>
         </property>
@@ -36,12 +42,47 @@
       </item>
       <item>
        <widget class="QToolButton" name="delete_btn">
+        <property name="minimumSize">
+         <size>
+          <width>23</width>
+          <height>22</height>
+         </size>
+        </property>
         <property name="text">
          <string>...</string>
         </property>
         <property name="icon">
          <iconset resource="../resources.qrc">
           <normaloff>:/plugins/stdm/images/icons/remove.png</normaloff>:/plugins/stdm/images/icons/remove.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>16</width>
+          <height>16</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="view_document_btn">
+        <property name="minimumSize">
+         <size>
+          <width>23</width>
+          <height>22</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>...</string>
+        </property>
+        <property name="icon">
+         <iconset resource="../resources.qrc">
+          <normaloff>:/plugins/stdm/images/icons/document.png</normaloff>:/plugins/stdm/images/icons/document.png</iconset>
         </property>
         <property name="iconSize">
          <size>
