--- a/ui/social_tenure/ui_str_editor.ui
+++ b/ui/social_tenure/ui_str_editor.ui
@@ -34,7 +34,7 @@
         </sizepolicy>
        </property>
        <property name="currentIndex">
-        <number>5</number>
+        <number>0</number>
        </property>
        <widget class="QWidget" name="page">
         <layout class="QVBoxLayout" name="verticalLayout_15">
@@ -290,7 +290,7 @@
        <number>0</number>
       </property>
       <property name="currentIndex">
-       <number>5</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="componentPage1">
        <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -386,7 +386,7 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>671</width>
+             <width>680</width>
              <height>426</height>
             </rect>
            </property>
@@ -517,14 +517,31 @@
           <item>
            <widget class="QLabel" name="label_7">
             <property name="text">
-             <string>Validity number of years</string>
+             <string>Tenure duration</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QSpinBox" name="number_of_year">
+           <widget class="QSpinBox" name="tenure_duration">
             <property name="maximum">
              <number>200</number>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="in_years">
+            <property name="text">
+             <string>In years</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="in_months">
+            <property name="text">
+             <string>In months</string>
             </property>
            </widget>
           </item>
@@ -548,7 +565,7 @@
           <item>
            <widget class="QLabel" name="label_8">
             <property name="text">
-             <string>Validity dates from</string>
+             <string>Validity period from</string>
             </property>
            </widget>
           </item>
