--- a/ui/ui_entity_browser.ui
+++ b/ui/ui_entity_browser.ui
@@ -53,6 +53,12 @@
    </item>
    <item row="2" column="0" colspan="4">
     <widget class="QTableView" name="tbEntity">
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Sunken</enum>
+     </property>
      <property name="editTriggers">
       <set>QAbstractItemView::NoEditTriggers</set>
      </property>
