Incorporated validity period search in View STR

--- a/resources.qrc
+++ b/resources.qrc
@@ -98,5 +98,6 @@
     <file>images/icons/save_image.png</file>
     <file>images/icons/period.png</file>
     <file>images/icons/down_arrow.png</file>
+    <file>images/icons/period_blue.png</file>
   </qresource>
 </RCC>
