Added the saving of draft configuration feature

--- a/ui/wizard/ui_stdm_config.ui
+++ b/ui/wizard/ui_stdm_config.ui
@@ -40,6 +40,9 @@
   <property name="wizardStyle">
    <enum>QWizard::ModernStyle</enum>
   </property>
+  <property name="options">
+   <set>QWizard::HaveCustomButton1|QWizard::HelpButtonOnRight</set>
+  </property>
   <widget class="QWizardPage" name="wpLicense">
    <property name="font">
     <font>
